--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   shared_preferences: ^2.2.2
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
