--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   cupertino_icons: ^1.0.0
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.0
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
+  sign_in_with_apple: ^6.1.3
+  cloud_firestore: ^5.5.1
 
 dev_dependencies:
   flutter_test:
