--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_sign_in: ^6.2.2
   sign_in_with_apple: ^6.1.3
   cloud_firestore: ^5.5.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
